fixed logo on mobile
fixed logo on mobile

--- a/app.css
+++ b/app.css
@@ -80,7 +80,7 @@ body h4{
 @media (max-width: 1181px) {
     .landingpage img.landinglogo {
         width: auto ;
-        max-width: 50% ;
+        max-width: 70% ;
         height: auto ;
     }
   }
@@ -118,7 +118,7 @@ body h4{
 @media (max-width: 1181px) {
     .landingpage .landingclaw img {
         width: auto ;
-        max-width: 50% ;
+        max-width: 100% ;
         height: auto ;
     }
   }
